@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.L0RE.dmax" name="DMAX Mediathek" version="1.0.4" provider-name="L0RE">
+<addon id="plugin.video.L0RE.dmax" name="DMAX Mediathek" version="1.0.5" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="service.L0RE.cron" version="1.0.1" optional="true"/>
@@ -25,11 +25,9 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.4  (29.06.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Rubrik = Alle Sendungen und Sendungen sortiert nach Beliebtheit - Fehler beim öffnen der Ordner (verirrte Sendungen die es gar nicht gibt)
-- fixed: Mehrfache Favoriteneinträge möglich, obwohl schon gespeichert
-- fixed: Laufzeitanzeige in der Bibliothek für Episoden die länger als 60 Minuten sind
-- optimized: Kleine Nachbesserrung für den Fix von User @mobsean für die Bibliothekfunktion: Sobald reguläre Episoden einer Serie vorhanden waren wurden die Specials nicht mehr angezeigt
+		<news>[B][COLOR orangered]Version 1.0.5  (30.06.2019)[/COLOR][/B] by realvito[CR]
+- fixed: UnicodeDecodeError: 'ascii' codec can't decode...
+- optimized: Serienordner mit neuen Episoden - gekennzeichnet (@mobsean)
 		</news>
 	</extension>
 </addon>
